<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    
     <item android:id="@+id/action_create_new_chat_room" 
     android:orderInCategory="0" 
     android:title="@string/create_new_public_chat_room"
     app:showAsAction="never" android:icon="@drawable/plus_icon"/>
     
     <item
        android:id="@+id/action_delete_all_history"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/clear_all_history"/>
     
     <item
        android:id="@+id/clear_ignore_list"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/clear_igonred_users_list"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/action_settings" android:icon="@drawable/settings_action_bar_icon"/>

        
    <item android:id="@+id/action_exit" 
        android:orderInCategory="4" 
        android:title="@string/exit_app" 
        app:showAsAction="never"/>
        

</menu>
