<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/fade_blue"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.syncbrothers.hymnatune.Wifi.Home_Screen">


    <ImageView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/hymn_attune"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <Space
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_below="@id/app_name"
        android:id="@+id/spacer"
        />

    <!---
    <TextView
        android:id="@+id/receive_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Receive"
        android:textSize="25sp"
        android:textColor="@color/fade_blue"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/rect_rounded_preclick"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:elevation="@dimen/elevate"
        android:onClick="onClick"
        android:clickable="true"
        android:layout_above="@+id/send_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp" />
-->


    <TextView
        android:id="@+id/solo_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/play_solo"
        android:textSize="25sp"
        android:textColor="@color/fade_blue"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/rect_rounded_preclick"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:elevation="@dimen/elevate"
        android:onClick="onClick"
        android:clickable="true"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/join_button"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/join_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/join_group"
        android:textSize="25sp"
        android:textColor="@color/fade_blue"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/rect_rounded_preclick"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:elevation="@dimen/elevate"
        android:onClick="onClick"
        android:clickable="true"
        android:layout_marginRight="39dp"
        android:layout_marginEnd="39dp"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/host_button"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/host_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/host_group"
        android:textSize="25sp"
        android:textColor="@color/fade_blue"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/rect_rounded_preclick"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:elevation="@dimen/elevate"
        android:onClick="onClick"
        android:clickable="true"
        android:layout_below="@+id/spacer" />

</RelativeLayout>
